# wayland-vr

./: .gitignore  AppEvent.c  AppInit.c  AppIterate.c  Makefile  README.md  SDL_wayland.h  cam2d.c  cam2d.h  console.c  console.h  displays.c  displays.h  env  main  main.c  meson.build  wayvr.h  win2d.c  win2d.h  window.c  window.h
aprws/: build.zig
assets/: IndexedTriangle.vert.glsl  IndexedTriangle.vert.spv  RawTriangle.vert.glsl  RawTriangle.vert.spv  TexturedQuad.frag.spv  colored.frag.glsl  colored.frag.spv  colored.vert.glsl  colored.vert.spv  sample.frag.glsl  sample.frag.spv  sample.vert.glsl  sample.vert.spv
console_app/: console.c  console.h  main.c
file_app/: build.zig  shell.nix
file_app/src/: main.zig
